RestaurantManagement/src/objects/PriceBook__c.object
<CustomObject>
    <fields>
        <fullName>Food_Item__c</fullName>
        <label>Food Item</label>
        <referenceTo>Food_Item__c</referenceTo>
        <relationshipLabel>PriceBooks</relationshipLabel>
        <relationshipName>PriceBooks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NoItemsOrdered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Items Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>PriceBook</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Food_Item__c</columns>
        <columns>Location__c</columns>
        <columns>Price__c</columns>
        <columns>NoItemsOrdered__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Pricebook</fullName>
        <columns>NAME</columns>
        <columns>Food_Item__c</columns>
        <columns>Location__c</columns>
        <columns>NoItemsOrdered__c</columns>
        <columns>Price__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>Pricebook</label>
    </listViews>
    <nameField>
        <label>PriceBook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PriceBooks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Location</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(Location__c  , &apos;&apos;), TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>Please select a location</errorMessage>
    </validationRules>
</CustomObject>